Adding repo and description infos

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "kata-angular",
   "version": "1.0.0",
-  "description": "",
+  "description": "CRUD kata for new Angular app",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ceo-kata/kata-angular.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
